# Gestione_Pioppeto

./: .gitignore  README.md  cloni copia.textClipping  cloni.json  main.py  pioppeto_main.py  pioppeto_main.ui  pyproject.toml  requirements.txt  ui_pioppeto_main.py
Core/: SimulatorePioppicultura.py  cloni.json  cloni_default.json  ditta.py  gestori_clone.py  lotto.py  parametri_simulazione.py  servizi.py  struttura_lavorazioni.py
GUI/: form_ditta.py  form_ditta.ui  form_lotti.py  form_lotti.ui  form_monitoraggio.py  form_monitoraggio.ui  form_valutazioni.py  form_valutazioni.ui  pioppeto_main.py  pioppeto_main.ui  storia.json  ui_form_ditta.py  ui_form_lotti.py  ui_form_monitoraggio.py  ui_form_valutazioni.py  ui_pioppeto_main.py  utils.py
risorse/: rc_risorse.py  risorse.qrc
